# twilio-synthetic-call-data-generator

./: .env.example  .eslintrc.js  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PIPELINE-VALIDATION-REPORT.md  README.md  SECURITY.md  TEST-RESULTS-SUMMARY.md  TEST-UPDATES-NEEDED.md  customers.json  jest.config.js  jest.setup.js  newman.config.json  package-lock.json  package.json  pyproject.toml  setupInstructions.md
.github/: CLAUDE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: brainstorm.md  code-review.md  do-issues.md  do-prompt-plan.md  do-todo.md  fix-gh-issue.md  issues.md  make-github-issues.md  plan.md  setup.md  tdd.md
.github/workflows/: ci.yml  (+1 more)
assets/: agents.json
docs/: INTEGRATION-TESTS.md  POST-MORTEM-OPENAI-REGRESSION.md  api-documentation.md  architecture.md  aws-iam-policy.json  deployment-guide.md  error-handling-guide.md  event-streams-setup.md  quick-start.md  segment-setup-guide.md  sync-setup-guide.md
functions/: conference-status-webhook.js  conference-timer.js  create-conference.js  error-handler.js  health.js  hello.js  respond.js  transcribe.js  transcription-webhook.js  voice-handler.js  voice-menu.js
postman/: collection.json  environment.json
scripts/: check-segment-profiles.js  configure-debugger-webhook.js  configure-phone-numbers.js  create-github-issue.js  create-language-operators.js  generate-bulk-calls.js  live-conversation-test.js  live-e2e-test.js  monitor-pipeline.js  post-deployment-validation.js  pre-deployment-check.js  provision-phone-numbers.js  run-five-e2e-tests.js  setup.js  smoke-test.js  sync-todos.js  test-error-handling.js  test-one-minute-call.js  validate-agents.js  validate-customers.js  validate-end-to-end.js  validate-env-example.js  validate-event-streams.js  validate-specific-conferences.js  validate-transcriptions.js
src/: main.js
templates/: prompt_plan.md  spec.md
tests/: hello.test.js  voice-menu.test.js
(+48 files in other folders)
